# contoso-test

./: .gitmodules  Governance.BuildTask.PPETests.csproj  README.md  azure-pipelines.yml  build-pipeline-new-ppe.yml  build-pipeline.yml  cgmanifest.json  functional-tests.yml  set-artifact-name.ps1  set-artifact-name.sh
Contracts/: GovernanceDetectionMetadata.cs  RegistrationRequest.cs
Contracts/TypedComponents/: CargoComponent.cs  ComponentType.cs  GitComponent.cs  LinuxComponent.cs  MavenComponent.cs  NpmComponent.cs  NugetComponent.cs  OtherComponent.cs  PipComponent.cs  RubyGemsComponent.cs  TypedComponent.cs
Templates/: test-pipeline.yml
Tests/: PPETests.cs  TestUtilities.cs
projects/cgmanifest/: cgmanifest.json
projects/cocoapods/flutter/: README.md
projects/cocoapods/heliport/: README.md
projects/dockerfile/: Dockerfile
projects/dockerfile/inner/: Dockerfile
projects/go/helm/: README.md
projects/gradle/: build.gradle  gradle.properties
projects/gradle-lock/: babelReleaseRuntimeClasspath.lockfile  devDebugRuntimeClasspath.lockfile
projects/gradle-lock/warp-core/: README.md
projects/maven/: cg.mvndeps  pom.xml
projects/maven/apache-maven/: README.md
projects/npm/: package-lock.json  package.json
projects/npm/express/: README.md  package-lock.json
projects/nuget/moq/: README.md  (+2 more)
projects/pip/: directions-for-freezing.md  requirements.txt
projects/pnpm/: README.md  shrinkwrap.yaml
projects/rust/: Cargo.toml
projects/rust/CargoV2/: Cargo.toml
projects/symlinkMess/: makeSymlinkMess.sh
projects/yarn/: README.md  package.json
(+21 files in other folders)
