[package]
name = "cdr"
version = "0.1.0"
authors = ["Teodor Voinea <tevoinea@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
serde = "1.0.105"
log = "0.4.8"
quote = "1.0.3"
lazy_static = "1.4.0"
bitflags = "1.2.1"
syn = "1.0.17"
libc = "0.2.68"
rand = "0.7.3"
image = "0.23.2"
winapi = "0.3.8"
async-std = "1.5.0"
tokio = "0.2.13"
rocket = "0.4.4"

[dependencies.cargo-lock]
cargoversion = "4.0.1"
features = ["dependency-tree"]
